# Renrust

./: Cargo.toml
src/: character.rs  core.rs  display.rs  graphics.rs  lib.rs  main.rs  renderer.rs
src/graphics/: animated.rs  mod.rs  screen.rs  sprite.rs  text.rs
src/text/: mod.rs  style.rs  text.rs
src/text_engine/: text.rs
