[package]
name = "renrust"
version = "0.1.0"
authors = ["Hadi Kaïs <kaiskhan.hadi@enseirb-matmeca.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
debug = true

[profile.release]
debug = false

[dependencies]
sdl2 = "0.32.2"
image = "0.22.4"
rusttype = "0.8.2"
rgb = "0.8.16"
lipsum = "0.6"

[dev-dependencies]
lipsum = "0.6"
